--- a/album-ratings.cabal
+++ b/album-ratings.cabal
@@ -63,7 +63,7 @@ executable album-ratings
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:    RatingParser
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
