--- a/album-ratings.cabal
+++ b/album-ratings.cabal
@@ -75,10 +75,11 @@ executable album-ratings
                       lens >= 5.3.4,
                       lens-aeson >= 1.2.3,
                       text >= 2.1.1,
-                      -- regex-tdfa >= 1.3.2.3,
                       parsec >= 3.1.17.0,
-                      mtl >= 2.3.1
-                      -- aeson >= 2.2.3.0
+                      mtl >= 2.3.1,
+                      bytestring >= 0.12.2.0,
+                      aeson >= 2.2.3.0,
+                      vector >= 0.13.2.0
 
     -- Directories containing source files.
     hs-source-dirs:   app
