--- a/album-ratings.cabal
+++ b/album-ratings.cabal
@@ -78,9 +78,8 @@ executable album-ratings
                       parsec >= 3.1.17.0,
                       mtl >= 2.3.1,
                       -- bytestring >= 0.12.2.0,
-                      aeson >= 2.2.3.0,
+                      aeson >= 2.2.3.0
                       -- vector >= 0.13.2.0
-                      scientific >= 0.3.8.0
 
     -- Directories containing source files.
     hs-source-dirs:   app
