--- a/album-ratings.cabal
+++ b/album-ratings.cabal
@@ -63,7 +63,8 @@ executable album-ratings
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules:    Ratings,
+    other-modules:    WikiRequests,
+                      Ratings,
                       Artist
 
     -- LANGUAGE extensions used by modules in this package.
