--- a/album-ratings.cabal
+++ b/album-ratings.cabal
@@ -64,7 +64,7 @@ executable album-ratings
 
     -- Modules included in this executable, other than Main.
     other-modules:    WikiRequests,
-                      Ratings,
+                      Album,
                       Artist
 
     -- LANGUAGE extensions used by modules in this package.
