--- a/album-ratings.cabal
+++ b/album-ratings.cabal
@@ -78,8 +78,8 @@ executable album-ratings
                       lens-aeson >= 1.2.3,
                       text >= 2.1.1,
                       parsec >= 3.1.17.0,
-                      mtl >= 2.3.1,
-                      aeson >= 2.2.3.0
+                      aeson >= 2.2.3.0,
+                      html-entity >= 0.1.3.0
 
     -- Directories containing source files.
     hs-source-dirs:   app
