--- a/album-ratings.cabal
+++ b/album-ratings.cabal
@@ -65,7 +65,8 @@ executable album-ratings
     -- Modules included in this executable, other than Main.
     other-modules:    Wiki,
                       Album,
-                      Artist
+                      Artist,
+                      LLM
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
