--- a/album-ratings.cabal
+++ b/album-ratings.cabal
@@ -80,7 +80,8 @@ executable album-ratings
                       text >= 2.1.1,
                       parsec >= 3.1.17.0,
                       aeson >= 2.2.3.0,
-                      html-entity >= 0.1.3.0
+                      html-entity >= 0.1.3.0,
+                      bytestring >= 0.12.2.0
 
     -- Directories containing source files.
     hs-source-dirs:   app
