--- a/album-ratings.cabal
+++ b/album-ratings.cabal
@@ -55,6 +55,14 @@ extra-doc-files:    CHANGELOG.md
 common warnings
     ghc-options: -Wall
 
+library wiki
+    import:           warnings
+    exposed-modules:  Wiki.TestModule
+    build-depends:    base >=4.20.0.0,
+                      text >= 2.1.1,
+    hs-source-dirs:   src
+    default-language: Haskell2010
+
 executable album-ratings
     -- Import common warning flags.
     import:           warnings
@@ -81,7 +89,8 @@ executable album-ratings
                       parsec >= 3.1.17.0,
                       aeson >= 2.2.3.0,
                       html-entity >= 0.1.3.0,
-                      bytestring >= 0.12.2.0
+                      bytestring >= 0.12.2.0,
+                      wiki
 
     -- Directories containing source files.
     hs-source-dirs:   app
