--- a/recrat.cabal
+++ b/recrat.cabal
@@ -57,29 +57,9 @@ common warnings
 
 library wiki
     import:           warnings
-    exposed-modules:  Wiki.TestModule
-    build-depends:    base >=4.20.0.0,
-                      text >= 2.1.1,
-    hs-source-dirs:   src
-    default-language: Haskell2010
-
-executable album-ratings
-    -- Import common warning flags.
-    import:           warnings
-
-    -- .hs or .lhs file containing the Main module.
-    main-is:          Main.hs
-
-    -- Modules included in this executable, other than Main.
-    other-modules:    Wiki,
-                      Album,
-                      Artist,
-                      LLM
-
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
-
-    -- Other library packages from which modules are imported.
+    exposed-modules:  Wiki.Album,
+                      Wiki.Artist,
+                      Wiki.Wiki
     build-depends:    base >=4.20.0.0,
                       wreq >= 0.5.0.1,
                       optparse-applicative >= 0.18.1.0,
@@ -89,6 +69,28 @@ executable album-ratings
                       parsec >= 3.1.17.0,
                       aeson >= 2.2.3.0,
                       html-entity >= 0.1.3.0,
+    hs-source-dirs:   src
+    default-language: Haskell2010
+
+executable recrat
+    -- Import common warning flags.
+    import:           warnings
+
+    -- .hs or .lhs file containing the Main module.
+    main-is:          Main.hs
+
+    -- Modules included in this executable, other than Main.
+    other-modules:    LLM
+
+    -- LANGUAGE extensions used by modules in this package.
+    -- other-extensions:
+
+    -- Other library packages from which modules are imported.
+    build-depends:    base >=4.20.0.0,
+                      lens >= 5.3.4,
+                      lens-aeson >= 1.2.3,
+                      text >= 2.1.1,
+                      aeson >= 2.2.3.0,
                       bytestring >= 0.12.2.0,
                       wiki
 
