--- a/recrat.cabal
+++ b/recrat.cabal
@@ -60,15 +60,16 @@ library wiki
     exposed-modules:  Wiki.Album,
                       Wiki.Artist,
                       Wiki.Wiki
-    build-depends:    base >=4.20.0.0,
-                      wreq >= 0.5.0.1,
-                      optparse-applicative >= 0.18.1.0,
+    build-depends:    aeson >= 2.2.3.0,
+                      base >=4.20.0.0,
+                      bytestring >= 0.12.2.0,
+                      html-entity >= 0.1.3.0,
                       lens >= 5.3.4,
                       lens-aeson >= 1.2.3,
-                      text >= 2.1.1,
+                      optparse-applicative >= 0.18.1.0,
                       parsec >= 3.1.17.0,
-                      aeson >= 2.2.3.0,
-                      html-entity >= 0.1.3.0,
+                      text >= 2.1.1,
+                      wreq >= 0.5.0.1
     hs-source-dirs:   src
     default-language: Haskell2010
 
@@ -86,12 +87,14 @@ executable recrat
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base >=4.20.0.0,
+    build-depends:    aeson >= 2.2.3.0,
+                      base >=4.20.0.0,
+                      bytestring >= 0.12.2.0,
                       lens >= 5.3.4,
                       lens-aeson >= 1.2.3,
+                      optparse-applicative >= 0.18.1.0,
                       text >= 2.1.1,
-                      aeson >= 2.2.3.0,
-                      bytestring >= 0.12.2.0,
+                      wreq >= 0.5.0.1,
                       wiki
 
     -- Directories containing source files.
