Create new module Console for command line print stuff.

--- a/recrat.cabal
+++ b/recrat.cabal
@@ -59,6 +59,7 @@ library wiki
     import:           warnings
     exposed-modules:  Wiki.Album,
                       Wiki.Artist,
+                      Wiki.Console,
                       Wiki.Wiki
     build-depends:    aeson >= 2.2.3.0,
                       base >=4.20.0.0,
