--- a/recrat.cabal
+++ b/recrat.cabal
@@ -74,6 +74,19 @@ library wiki
     hs-source-dirs:   src
     default-language: Haskell2010
 
+library llm
+    import:           warnings
+    exposed-modules:  LLM.LLM
+    build-depends:    aeson >= 2.2.3.0,
+                      base >=4.20.0.0,
+                      bytestring >= 0.12.2.0,
+                      lens >= 5.3.4,
+                      lens-aeson >= 1.2.3,
+                      text >= 2.1.1,
+                      wreq >= 0.5.0.1
+    hs-source-dirs:   src
+    default-language: Haskell2010
+
 executable recrat
     -- Import common warning flags.
     import:           warnings
@@ -82,7 +95,7 @@ executable recrat
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules:    LLM
+    -- other-modules:
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -96,7 +109,8 @@ executable recrat
                       optparse-applicative >= 0.18.1.0,
                       text >= 2.1.1,
                       wreq >= 0.5.0.1,
-                      wiki
+                      wiki,
+                      llm
 
     -- Directories containing source files.
     hs-source-dirs:   app
