--- a/recrat.cabal
+++ b/recrat.cabal
@@ -114,7 +114,15 @@ executable recrat
                       llm
 
     -- Directories containing source files.
-    hs-source-dirs:   app
+    hs-source-dirs:   cli
 
     -- Base language which the package is written in.
+    default-language: Haskell2010
+
+executable webserver
+    import:           warnings
+    main-is:          Main.hs
+    build-depends:    base >=4.20.0.0,
+                      text >= 2.1.1
+    hs-source-dirs:   webserver
     default-language: Haskell2010
