First Scotty web page! \o/

--- a/recrat.cabal
+++ b/recrat.cabal
@@ -123,6 +123,7 @@ executable webserver
     import:           warnings
     main-is:          Main.hs
     build-depends:    base >=4.20.0.0,
-                      text >= 2.1.1
+                      text >= 2.1.1,
+                      scotty >= 0.12.1
     hs-source-dirs:   webserver
     default-language: Haskell2010
