wiki: Break out some code from Album to new Rating module for better separation.

--- a/recrat.cabal
+++ b/recrat.cabal
@@ -61,6 +61,7 @@ library wiki
                       Wiki.Artist,
                       Wiki.Console,
                       Wiki.MediaWiki,
+                      Wiki.Rating
     build-depends:    aeson >= 2.2.3.0,
                       base >=4.20.0.0,
                       bytestring >= 0.12.2.0,
