--- a/recrat.cabal
+++ b/recrat.cabal
@@ -126,6 +126,7 @@ executable webserver
     build-depends:    base >=4.20.0.0,
                       text >= 2.1.1,
                       scotty >= 0.12.1,
-                      blaze-html >= 0.9.2.0
+                      lucid2 >= 0.0.20250303
+                      -- blaze-html >= 0.9.2.0
     hs-source-dirs:   webserver
     default-language: Haskell2010
