--- a/recrat.cabal
+++ b/recrat.cabal
@@ -125,7 +125,9 @@ executable webserver
     build-depends:    base >=4.20.0.0,
                       text >= 2.1.1,
                       scotty >= 0.12.1,
-                      lucid2 >= 0.0.20250303
+                      lucid2 >= 0.0.20250303,
+                      wiki,
+                      llm
                       -- blaze-html >= 0.9.2.0
     hs-source-dirs:   webserver
     default-language: Haskell2010
