--- a/recrat.cabal
+++ b/recrat.cabal
@@ -126,8 +126,8 @@ executable webserver
                       text >= 2.1.1,
                       scotty >= 0.12.1,
                       lucid2 >= 0.0.20250303,
+                      formatting >= 7.1.3,
                       wiki,
                       llm
-                      -- blaze-html >= 0.9.2.0
     hs-source-dirs:   webserver
     default-language: Haskell2010
