--- a/recrat.cabal
+++ b/recrat.cabal
@@ -128,6 +128,7 @@ executable webserver
                       scotty >= 0.12.1,
                       lucid2 >= 0.0.20250303,
                       formatting >= 7.1.3,
+                      wai-middleware-static >= 0.9.3,
                       wiki,
                       llm
     hs-source-dirs:   webserver
