--- a/recrat.cabal
+++ b/recrat.cabal
@@ -55,6 +55,14 @@ extra-doc-files:    CHANGELOG.md
 common warnings
     ghc-options: -Wall
 
+library artist
+    import:           warnings
+    exposed-modules:  Artist.Types
+    build-depends:    text >= 2.1.1,
+                      base >=4.20.0.0
+    hs-source-dirs:   src
+    default-language: Haskell2010
+
 library wiki
     import:           warnings
     exposed-modules:  Wiki.Album,
@@ -85,7 +93,8 @@ library llm
                       lens >= 5.3.4,
                       lens-aeson >= 1.2.3,
                       text >= 2.1.1,
-                      wreq >= 0.5.0.1
+                      wreq >= 0.5.0.1,
+                      artist
     hs-source-dirs:   src
     default-language: Haskell2010
 
