--- a/recrat.cabal
+++ b/recrat.cabal
@@ -55,46 +55,26 @@ extra-doc-files:    CHANGELOG.md
 common warnings
     ghc-options: -Wall
 
-library artist
+library ratlib
     import:           warnings
-    exposed-modules:  Artist.Types
-    build-depends:    text >= 2.1.1,
-                      base >=4.20.0.0
-    hs-source-dirs:   src
-    default-language: Haskell2010
-
-library wiki
-    import:           warnings
-    exposed-modules:  Wiki.Album,
+    exposed-modules:  Artist.Types,
+                      Wiki.Album,
                       Wiki.Artist,
                       Wiki.MediaWiki,
                       Wiki.Rating,
-                      Wiki.Error
-    build-depends:    aeson >= 2.2.3.0,
+                      Wiki.Error,
+                      LLM.LLM,
+                      LLM.Mistral
+    build-depends:    text >= 2.1.1,
                       base >=4.20.0.0,
+                      aeson >= 2.2.3.0,
                       bytestring >= 0.12.2.0,
                       html-entity >= 0.1.3.0,
                       lens >= 5.3.4,
                       lens-aeson >= 1.2.3,
                       optparse-applicative >= 0.18.1.0,
                       parsec >= 3.1.17.0,
-                      text >= 2.1.1,
                       wreq >= 0.5.0.1
-    hs-source-dirs:   src
-    default-language: Haskell2010
-
-library llm
-    import:           warnings
-    exposed-modules:  LLM.LLM,
-                      LLM.Mistral
-    build-depends:    aeson >= 2.2.3.0,
-                      base >=4.20.0.0,
-                      bytestring >= 0.12.2.0,
-                      lens >= 5.3.4,
-                      lens-aeson >= 1.2.3,
-                      text >= 2.1.1,
-                      wreq >= 0.5.0.1,
-                      artist
     hs-source-dirs:   src
     default-language: Haskell2010
 
