--- a/recrat.cabal
+++ b/recrat.cabal
@@ -57,14 +57,14 @@ common warnings
 
 library ratlib
     import:           warnings
-    exposed-modules:  Artist.Types,
-                      Wiki.Album,
-                      Wiki.Artist,
-                      Wiki.MediaWiki,
-                      Wiki.Rating,
-                      Wiki.Error,
-                      LLM.LLM,
-                      LLM.Mistral
+    exposed-modules:  RatLib.Types,
+                      RatLib.Wiki.Album,
+                      RatLib.Wiki.Artist,
+                      RatLib.Error,
+                      RatLib.LLM,
+    other-modules:    RatLib.LLM.Mistral,
+                      RatLib.Wiki.MediaWiki,
+                      RatLib.Wiki.Rating
     build-depends:    text >= 2.1.1,
                       base >=4.20.0.0,
                       aeson >= 2.2.3.0,
@@ -100,8 +100,7 @@ executable recrat
                       optparse-applicative >= 0.18.1.0,
                       text >= 2.1.1,
                       wreq >= 0.5.0.1,
-                      wiki,
-                      llm
+                      ratlib
 
     -- Directories containing source files.
     hs-source-dirs:   cli
@@ -118,7 +117,6 @@ executable webserver
                       lucid2 >= 0.0.20250303,
                       formatting >= 7.1.3,
                       wai-middleware-static >= 0.9.3,
-                      wiki,
-                      llm
+                      ratlib
     hs-source-dirs:   webserver
     default-language: Haskell2010
